--- a/frontend/admin/gallery.html
+++ b/frontend/admin/gallery.html
@@ -2,6 +2,20 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
+
+    <!-- Favicons -->
+    <link
+      rel="icon"
+      href="/pelatihanmargono/backend/uploads/foto/LogoRSMS2.png"
+      type="image/png"
+      sizes="512x512"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="/pelatihanmargono/backend/uploads/foto/LogoRSMS.png"
+      sizes="180x180"
+    />
+
     <title>Admin - Gallery</title>
 
     <link
@@ -28,9 +42,22 @@
 
   <body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
+    <!-- ================= NAVBAR ================= -->
+    <nav
+      class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm sticky-top"
+    >
       <div class="container">
-        <a class="navbar-brand fw-bold" href="index.html">Admin DIKLAT</a>
+        <a
+          class="navbar-brand fw-bold d-flex align-items-center gap-2"
+          href="index.html"
+        >
+          <img
+            src="/pelatihanmargono/backend/uploads/foto/LogoRSMS.png"
+            alt="Logo RSMS"
+            style="height: 36px"
+          />
+          <span>ADMIN DIKLAT RSMS</span>
+        </a>
 
         <button
           class="navbar-toggler"
@@ -43,23 +70,15 @@
 
         <div class="collapse navbar-collapse" id="adminNav">
           <ul class="navbar-nav ms-auto">
-            <!-- ==================== DROPDOWN PELATIHAN ==================== -->
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
-                id="dropdownPelatihan"
-                role="button"
                 data-bs-toggle="dropdown"
-                aria-expanded="false"
               >
                 Pelatihan
               </a>
-
-              <ul
-                class="dropdown-menu dropdown-menu-dark"
-                aria-labelledby="dropdownPelatihan"
-              >
+              <ul class="dropdown-menu dropdown-menu-dark">
                 <li>
                   <a class="dropdown-item" href="pelatihan.html"
                     >Manajemen Pelatihan</a
@@ -67,7 +86,7 @@
                 </li>
                 <li>
                   <a class="dropdown-item" href="pendaftaran.html"
-                    >Data Pendaftar Pelatihan</a
+                    >Data Pendaftar</a
                   >
                 </li>
                 <li>
@@ -76,53 +95,40 @@
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="gallery.html"
-                    >Gallery Diklat</a
-                  >
+                  <a class="dropdown-item" href="gallery.html">Gallery</a>
                 </li>
               </ul>
             </li>
 
-            <!-- ==================== DROPDOWN TIM & MITRA ==================== -->
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
-                id="dropdownTim"
-                role="button"
                 data-bs-toggle="dropdown"
-                aria-expanded="false"
               >
-                Tim & Mitra Pelatihan
+                Tim & Mitra
               </a>
-
-              <ul
-                class="dropdown-menu dropdown-menu-dark"
-                aria-labelledby="dropdownTim"
-              >
+              <ul class="dropdown-menu dropdown-menu-dark">
                 <li>
-                  <a class="dropdown-item" href="fasilitator.html">
-                    Profesional Fasilitor & Instruktur Tersertifikasi
-                  </a>
+                  <a class="dropdown-item" href="fasilitator.html"
+                    >Fasilitator</a
+                  >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="penyelenggara.html">
-                    Tim Penyelenggara Pelatihan Tersertifikasi
-                  </a>
+                  <a class="dropdown-item" href="penyelenggara.html"
+                    >Penyelenggara</a
+                  >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="institusi.html">
-                    Institusi Kerjasama
-                  </a>
+                  <a class="dropdown-item" href="institusi.html">Institusi</a>
                 </li>
               </ul>
             </li>
 
-            <!-- ==================== LOGOUT ==================== -->
             <li class="nav-item">
-              <a class="nav-link text-danger fw-bold" href="logout.html"
-                >Logout</a
-              >
+              <button class="btn btn-danger ms-3" onclick="logoutAdmin()">
+                Logout
+              </button>
             </li>
           </ul>
         </div>
