--- a/frontend/admin/loginadmin.html
+++ b/frontend/admin/loginadmin.html
@@ -2,7 +2,20 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <title>Login Admin</title>
+
+    <link
+      rel="icon"
+      href="/pelatihanmargono/backend/uploads/foto/LogoRSMS2.png"
+      type="image/png"
+      sizes="512x512"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="/pelatihanmargono/backend/uploads/foto/LogoRSMS.png"
+      sizes="180x180"
+    />
+
+    <title>Login Admin | DIKLAT RSUD Margono Soekarjo</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -25,9 +38,16 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-dark bg-dark">
-      <div class="container">
-        <span class="navbar-brand fw-bold">Admin DIKLAT</span>
+    <nav class="navbar navbar-dark bg-dark shadow-sm">
+      <div class="container d-flex justify-content-center">
+        <span class="navbar-brand fw-bold d-flex align-items-center gap-2">
+          <img
+            src="/pelatihanmargono/backend/uploads/foto/LogoRSMS.png"
+            alt="Logo RSMS"
+            style="height: 36px"
+          />
+          <span>ADMIN DIKLAT RSUD MARGONO SOEKARJO</span>
+        </span>
       </div>
     </nav>
 
