--- a/frontend/alurpendaftaran.html
+++ b/frontend/alurpendaftaran.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Privacy - MediTrust Bootstrap Template</title>
+  <title>Alur Pendaftaran - DIKLAT RSMS</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
